--- a/app/src/main/res/layout/activity_edit_period_list.xml
+++ b/app/src/main/res/layout/activity_edit_period_list.xml
@@ -34,95 +34,14 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_add"
         >
         <!--orientation 추가 가능?-->
-
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <!--30dp-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="95dp"
-                android:background="@drawable/style_unclicked_period_border"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="30dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2022, May, 1 \n~ 2022, May, 6"
-                    android:textColor="@color/primary_light"
-                    android:textStyle="bold"
-                    android:textSize="28dp"
-                    android:layout_marginStart="26dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp">
-                </TextView>
-                <ImageView
-                    android:layout_width="8dp"
-                    android:layout_height="95dp"
-                    android:src="@drawable/style_edit_perioid_line"
-                    android:layout_marginStart="50dp">
-                </ImageView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5 days"
-                    android:textSize="28dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/primary_light"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="15dp">
-                </TextView>
-            </LinearLayout>
-
-            <!--20dp-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="95dp"
-                android:background="@drawable/style_unclicked_period_border"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2022, May, 1 \n~ 2022, May, 6"
-                    android:textColor="@color/primary_light"
-                    android:textStyle="bold"
-                    android:textSize="28dp"
-                    android:layout_marginStart="26dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp">
-                </TextView>
-                <ImageView
-                    android:layout_width="8dp"
-                    android:layout_height="95dp"
-                    android:src="@drawable/style_edit_perioid_line"
-                    android:layout_marginStart="50dp">
-                </ImageView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5 days"
-                    android:textSize="28dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/primary_light"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="15dp">
-                </TextView>
-            </LinearLayout>
-        </LinearLayout>
-
-
-
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="15dp"
+            tools:listitem="@layout/listitem_edit_period"
+            />
     </androidx.core.widget.NestedScrollView>
-
-
 
     <!--생리 편집 추가 버튼-->
     <Button
